fix user post and patch contr methods
